--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   </nav>
   <section>
     <div>
-     <h3>Calcular IMC:</h3>
+     <h3>Calculadora de IMC</h3>
       <form method="post" class="form-group">
         <label for="nome">Nome do Paciente</label>
         <input type="text" id="nomePaciente" name="nomePaciente" class="form-control" required>
-        <label for="nome">Peso</label>
-        <input type="number" id="peso" name="peso" step="any" class="form-control" required>
-        <label for="nome">Altura</label>
-        <input type="number" id="altura" name="altura" step="any" class="form-control" required>
+        <label for="nome">Peso(kg)</label>
+        <input type="number" id="peso" name="peso" step="any" class="form-control" placeholder="57.5" required>
+        <label for="nome">Altura(m)</label>
+        <input type="number" id="altura" name="altura" step="any" class="form-control" placeholder="1.65" required>
         <article>
           <button type="submit" class="btn btn-success calcular" id="btnCalcular">Calcular</button>
         </article>
